...
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_forward" />

            <ImageView
                android:id="@+id/iv_companyIcon_vp_item"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:contentDescription="CompanyLogo" />

            <TextView
                android:id="@+id/tv_companyName_vp_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toStartOf="@id/iv_arrow_vp_item"
                android:layout_toEndOf="@id/iv_companyIcon_vp_item"
...
